--- a/rsc/less/_dev-blocks.module.less
+++ b/rsc/less/_dev-blocks.module.less
@@ -178,6 +178,9 @@ div.dev-blocks--belowtoolbar {
 }
 .evo_widget[data-id] {
 	z-index: 10002;
+	// Set position to relative, otherwise z-index doesn't work properly and impossible to select
+	// other widget when designer container block is visible even if it has "z-index:10001"
+	position: relative;
 }
 .evo_designer__widget {
 	z-index: 10003;
